<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NDKClientApp</string>
    <string name="title_activity_client">Chat Client</string>
    <string name="port_edit">Port Number</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>   
    <string name="send_button">Send</string> 
    <string name="ip_edit">IP Address</string>
    <string name="message_edit">Message</string>
    <string name="nick_edit">Nick Name</string>

</resources>
