<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
           
	    <EditText
	        android:id="@+id/ip_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:hint="@string/ip_edit" >
	
	        <requestFocus />
	
	    </EditText>
	
	    <EditText
	        android:id="@+id/port_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:hint="@string/port_edit"
	        android:inputType="number" />
	    
    </LinearLayout>
    
    <EditText
        android:id="@+id/nick_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick_edit" />    
        
    <EditText
        android:id="@+id/message_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_edit" />
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
	        android:id="@+id/start_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:text="@string/start_button" />
        
        <Button
	        android:id="@+id/stop_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:text="@string/stop_button" />
         
        <Button
	        android:id="@+id/send_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:text="@string/send_button" />
        
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>